<resources>
    <string name="app_name">疾病报告系统</string>

    <string name="login_id_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_btn_text">登 陆</string>
    <string name="normal_user_text">普通用户</string>
    <string name="doctor_text">医生</string>
    <string name="admin_text">管理员</string>
    <string name="id_password_illegal_text">用户名或密码不能为空</string>
    <string name="personal_info_text">个人信息</string>
    <string name="health_punch_text">健康打卡</string>
    <string name="disease_case_text">病历管理</string>
    <string name="user_manage_text">人员管理</string>
    <string name="health_data_text">数据统计</string>
    <string name="network_error_text">网络错误，请点击重试</string>
    <string name="content_empty">内容为空</string>
    <string name="punch_manage_text">打卡管理</string>
    <string name="main_activity_title">疾病报告</string>
    <string name="personal_info">个人信息</string>
    <string name="exit_text">退出登录</string>
    <string name="logout_text">退出登录</string>
    <string name="name_text">姓名</string>
    <string name="stu_num_text">学号</string>
    <string name="sex_text">性别</string>
    <string name="grade_text">年级</string>
    <string name="institute_text">学院</string>
    <string name="major_text">专业</string>
    <string name="clazz_text">班级</string>
    <string name="dormitory_text">宿舍</string>
    <string name="complete_modify_text">完成修改</string>
    <string name="password_text">密码</string>
    <string name="create_user_text">创建用户</string>
    <string name="id_text">账号</string>
    <string name="remark_dot_text">备注:</string>
    <string name="disease_case_level_text">疾病等级</string>
    <string name="disease_case_detail_toolbar_text">病例修改</string>
    <string name="disease_case_name_text">疾病名称</string>
    <string name="create_time_text">录入时间</string>
    <string name="detail_text">详细信息</string>
    <string name="add_disease_case_text">添加病例</string>
    <string name="please_input_stu_num_text">请输入学号</string>
    <string name="name_dot_text">姓名：</string>
    <string name="sex_dot_text">性别：</string>
    <string name="major_dot_text">专业：</string>
    <string name="clazz_dot_text">班级：</string>
    <string name="institute_dot_text">学院：</string>
    <string name="grade_dot_text">年级：</string>
    <string name="dormitory_dot_text">宿舍：</string>
    <string name="add_disease_case_complete_text">添加完成</string>
    <string name="remark_text">备注</string>
    <string name="doctor_user_text">医生用户</string>
    <string name="today_school_data_text">今日校园数据</string>
    <string name="punch_text">打卡</string>
    <string name="today_already_punch_text">今日已完成打卡</string>
    <string name="task_name_text">任务名称</string>
    <string name="task_state_text">任务状态</string>
    <string name="task_create_time_text">发布时间</string>
    <string name="running">正在进行</string>
    <string name="ended">已结束</string>
    <string name="public_task_text">发布任务</string>
    <string name="add_item_text">添加条目</string>
    <string name="confirm_text">确认</string>
    <string name="cancel_text">取消</string>
    <string name="please_input_item_name_text">请输入条目名称</string>
    <string name="task_detail_text">任务详情</string>
    <string name="num_text">序号</string>
    <string name="date_text">日期</string>

</resources>
