<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.muz1i.diseasereportandroid.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.muz1i.diseasereportandroid.custom.LoadingView
            android:id="@+id/loading_pic"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/spacing_mxlarge"
            android:src="@mipmap/logo_b"
            app:layout_constraintBottom_toTopOf="@id/login_id_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_id_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_id_hint"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@={viewModel.id}"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_password_hint"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_id_layout"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/permission_select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@={viewModel.identity}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout">

            <RadioButton
                android:id="@+id/user_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/normal_user_text"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/doctor_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/doctor_text"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/admin_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/admin_text"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permission_select_btn"
            app:layout_constraintWidth_percent="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
