<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.muz1i.diseasereportandroid.bean.DiseaseCaseSimple" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_user_layout"
                    style="@style/TextInputLayoutSingleLineStyle"
                    android:layout_marginTop="30dp"
                    android:hint="@string/stu_num_text"
                    app:layout_constraintBottom_toTopOf="@id/disease_name_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@mipmap/number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:singleLine="true"
                        android:text="@{``+viewModel.id_user}"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/disease_name_layout"
                    style="@style/TextInputLayoutSingleLineStyle"
                    android:hint="@string/disease_case_name_text"
                    app:layout_constraintTop_toBottomOf="@id/id_user_layout"
                    app:startIconDrawable="@mipmap/disease">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.disease_name}"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/disease_level_layout"
                    style="@style/TextInputLayoutAutoStyle"
                    android:hint="@string/disease_case_level_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/disease_name_layout"
                    app:layout_constraintWidth_percent="0.5"
                    app:startIconDrawable="@mipmap/level">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.disease_level}"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_time_layout"
                    style="@style/TextInputLayoutSingleLineStyle"
                    android:hint="@string/create_time_text"
                    app:layout_constraintTop_toBottomOf="@id/disease_level_layout"
                    app:startIconDrawable="@mipmap/create_time_b">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:text="@={viewModel.create_time}"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/remark_layout"
                    style="@style/TextInputLayoutSingleLineStyle"
                    android:hint="@string/remark_dot_text"
                    app:layout_constraintTop_toBottomOf="@id/create_time_layout"
                    app:startIconDrawable="@mipmap/remark_b">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:text="@={viewModel.remark}"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/modify_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:padding="5dp"
                    android:text="@string/complete_modify_text"
                    app:layout_constraintEnd_toEndOf="@id/remark_layout"
                    app:layout_constraintStart_toStartOf="@id/remark_layout"
                    app:layout_constraintTop_toBottomOf="@id/remark_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
