<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/health_data_create_time"
            style="@style/DiseaseCaseAddStyle"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/create_time_text"
            app:layout_constraintEnd_toStartOf="@id/health_data_institute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@mipmap/create_time">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/health_data_institute"
            style="@style/TextInputLayoutAutoStyle"
            android:hint="@string/institute_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/health_data_create_time"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@mipmap/institute">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/health_data_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/blue_indigo"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/today_school_data_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/health_data_create_time" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spacing_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/health_data_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
