<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/top_divide_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/header_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_indigo"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_divide_line">

            <TextView
                android:id="@+id/default_item_one"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:gravity="center"
                android:text="@string/num_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/default_item_two"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:gravity="center"
                android:text="@string/date_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/default_item_three"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:gravity="center"
                android:text="@string/id_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_indigo"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_default">

            <TextView
                android:id="@+id/item_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task_content_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
